fix(z-index): 解决当页头是浮动时, popup z-index高的问题
Closes #109

--- a/packages/v-dialog/css/dialog.scss
+++ b/packages/v-dialog/css/dialog.scss
@@ -3,6 +3,10 @@
   width: auto;
   margin: 10px;
 
+  &-doc-open {
+    overflow: hidden;
+  }
+
   &-wrap {
     position: fixed;
     overflow: auto;
